# wondertrader

./: DEVELOPMENT.md  copy_bins_linux.sh  updatelog.md
src/: CMakeLists.txt
src/API/: CMakeLists.txt  binacpp_fut.cpp  binacpp_fut.h
src/API/CTP6.3.15/: ThostFtdcUserApiStruct.h
src/API/FixApi/: CMakeLists.txt  FIX5.vcxproj  FIX5.vcxproj.filters  ParseFIX.cpp  ParseFIX.h  WtFixApiBase.cpp  WtFixMsgCodec.h  WtFixSessionMgr.cpp  WtFixSessionMgr.h  WtFixTraderApi.cpp  readme.md
src/API/FixApi/config/: FIX5.xml  config.yaml
src/API/websocket_client/: ws_client.cpp  ws_client.h
src/CTPLoader/: CMakeLists.txt  CTPLoader.cpp  TraderSpi.cpp  TraderSpi.h
src/Common/: mdump.cpp  mdump.h
src/Includes/: CtaStrategyDefs.h  ExecuteDefs.h  HftStrategyDefs.h  IBaseDataMgr.h  IBtDtReader.h  ICtaStraCtx.h  IDataFactory.h  IDataReader.h  IDataWriter.h  IExpFactory.h  IHftStraCtx.h  IHotMgr.h  ILogHandler.h  IParserApi.h  IRdmDtReader.h  ISelStraCtx.h  ISessionMgr.h  ITraderApi.h  IUftStraCtx.h  RiskMonDefs.h  SelStrategyDefs.h  UftStrategyDefs.h  WTSCollection.hpp  WTSContractInfo.hpp  WTSError.hpp  WTSExpressData.hpp  WTSMarcos.h  WTSObject.hpp  WTSRiskDef.hpp  WTSSessionInfo.hpp  WTSStruct.h  WTSSwitchItem.hpp  WTSTradeDef.hpp  WTSTypes.h  WTSVariant.hpp
src/ParserBA/: CMakeLists.txt  ParserBA.cpp  ParserBA.h  TraderBA.cpp  TraderBA.h
src/ParserCTP/: CMakeLists.txt  ParserCTP.cpp  ParserCTP.h
src/ParserUDP/: ParserUDP.cpp
src/ParserXTP/: ParserXTP.cpp  ParserXTP.h
src/QuoteFactory/: CMakeLists.txt  main.cpp
src/Share/: BoostFile.hpp  BoostMappingFile.hpp  CodeHelper.hpp  CpuHelper.hpp  DLLHelper.hpp  IniHelper.hpp  ObjectPool.hpp  StdUtils.hpp  StrUtil.hpp  TimeUtils.hpp  WtKVCache.hpp  charconv.hpp  decimal.h
src/TestBtPorter/: main.cpp
src/TestDtPorter/: main.cpp
src/TestTrader/: main.cpp
src/TestUnits/: test_kvcache.cpp  test_lmdb.cpp  test_object_pool.cpp
src/TraderATP/: TraderATP.cpp  TraderATP.h
src/TraderCTP/: CMakeLists.txt  TraderCTP.cpp  TraderCTP.h
src/TraderDD/: TraderDD.h
src/TraderMocker/: TraderMocker.cpp  TraderMocker.h
src/WTSTools/: CsvHelper.cpp  WTSBaseDataMgr.cpp  WTSBaseDataMgr.h  WTSDataFactory.cpp  WTSDataFactory.h  WTSHotMgr.cpp  WTSHotMgr.h  WTSLogger.cpp  WTSLogger.h
src/WTSUtils/: WTSCfgLoader.cpp  WtLMDB.hpp
src/WtCore/: CtaStraBaseCtx.h  CtaStraContext.h  CtaStrategyMgr.cpp  EventNotifier.h  HftStrategyMgr.cpp  ParserAdapter.cpp  ParserAdapter.h  SelStrategyMgr.cpp  TraderAdapter.cpp  TraderAdapter.h  WtDtMgr.cpp  WtDtMgr.h  WtEngine.h  WtExecuterFactory.cpp  WtExecuterFactory.h  WtHftEngine.cpp  WtHftEngine.h  WtLocalExecuter.cpp  WtLocalExecuter.h  WtSelEngine.cpp  WtSelEngine.h  WtSelTicker.cpp
src/WtDataStorage/: DataDefine.h  WtBtDtReader.cpp  WtDataReader.cpp  WtDataReader.h  WtDataWriter.cpp  WtDataWriter.h  WtRdmDtReader.cpp  WtRdmDtReader.h
src/WtDataStorageAD/: DataDefineAD.h  WtBtDtReaderAD.h  WtDataReaderAD.cpp  WtDataReaderAD.h  WtDataWriterAD.cpp  WtDataWriterAD.h  WtRdmDtReaderAD.cpp  WtRdmDtReaderAD.h
src/WtDtCore/: DataManager.cpp  DataManager.h  IndexFactory.cpp  IndexWorker.cpp  ParserAdapter.cpp  ParserAdapter.h  StatHelper.hpp  StateMonitor.cpp  StateMonitor.h  UDPCaster.cpp  UDPCaster.h
src/WtDtPorter/: CMakeLists.txt  WtDtPorter.h
src/WtLatencyHFT/: HftLatencyTool.cpp  HftLatencyTool.h
src/WtLatencyUFT/: UftLatencyTool.cpp  UftLatencyTool.h
src/WtMsgQue/: MQClient.cpp  MQClient.h  MQManager.h  MQServer.cpp  MQServer.h
src/WtPorter/: CMakeLists.txt  ExpCtaContext.cpp  ExpHftContext.cpp  ExpSelContext.cpp  PorterDefs.h  WtPorter.cpp  WtPorter.h  WtRtRunner.cpp  WtRtRunner.h
src/WtRiskMonFact/: WtSimpRiskMon.cpp  WtSimpRiskMon.h
src/WtRunner/: CMakeLists.txt  WtRunner.cpp  WtRunner.h  main.cpp
src/WtSelStraFact/: WtStraDtSel.cpp  WtStraDtSel.h
src/WtUftCore/: ActionPolicyMgr.cpp  ITrdNotifySink.h  ParserAdapter.cpp  ParserAdapter.h  TraderAdapter.cpp  TraderAdapter.h  UftStraBaseCtx.cpp  UftStraBaseCtx.h  UftStrategyMgr.cpp  UftStrategyMgr.h  WtHelper.h  WtUftDtMgr.h  WtUftEngine.cpp  WtUftEngine.h  WtUftTicker.cpp  WtUftTicker.h
src/WtUftRunner/: CMakeLists.txt  WtUftRunner.cpp  WtUftRunner.h  main.cpp
src/WtUftStraFact/: WtUftStraDemo.cpp  WtUftStraFact.cpp
