#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

#2. 确定工程名
PROJECT(ParserBA LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 17)

IF(MSVC)
ELSE(GNUCC)
SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fPIC")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
ENDIF()

FILE(GLOB API_INCS ../API/*.h ../API/websocket_client/*.h)
FILE(GLOB API_FILES ../API/*.cpp ../API/websocket_client/*.cpp)

SET(SRC
	${PROJECT_SOURCE_DIR}/ParserBA.cpp
	${PROJECT_SOURCE_DIR}/ParserBA.h
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

INCLUDE_DIRECTORIES(${INCS})
LINK_DIRECTORIES(${LNKS})
ADD_LIBRARY(ParserBA SHARED ${SRC} ${API_INCS} ${API_FILES})

IF (MSVC)
ELSE (GNUCC)
	SET(LIBS
		boost_thread
		boost_filesystem
		dl
		curl
		jsoncpp
		websockets
		cpr
	)
	TARGET_LINK_LIBRARIES(ParserBA ${LIBS})
ENDIF()

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(ParserBA PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()
